# SLRC-School-Category

./: README.md  Webot Tutorial Sessions
EASY/Easy Task3/: Assem1.SLDASM  README.md  Robot.wbo  cad.SLDPRT  floor.SLDPRT  floor.STL  floor_stl.STEP  floorasfdzsfasdfasd.STEP  floorassemblr.SLDASM  floorrtsrg.SLDPRT  wheel.SLDPRT
EASY/Easy Task3/final test floor/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr _1009/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1038/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1047/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1048/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1049/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr1049/launch/: display.launch  gazebo.launch
EASY/Easy Task3/floorassemblr1049/urdf/: Floorassemblr1049.proto  floorassemblr1049.csv  floorassemblr1049.urdf
EASY/Easy Task3/floorassemblr1059/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr12345578/: CMakeLists.txt  package.xml
EASY/Easy Task3/floorassemblr12345578/launch/: display.launch  gazebo.launch
EASY/Easy Task3/floorassemblr12345578/urdf/: Floorassemblr12345578.proto
EASY/Easy Task3/protos/: Assem1.proto  Assem1.urdf  Last.proto  RobotUrdl.proto
EASY/Easy Task3/robot_urdl/: CMakeLists.txt  package.xml
EASY/Easy Task6/: README.md
Medium Task3/: README.md
TestProject1/worlds/: .custom.wbproj  custom.wbt
(+168 files in other folders)
